# cart-calculator

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/skills/code-review/: SKILL.md
.github/workflows/: ci.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2026-05-06-0000-scaffold-foundation/: spec.md  tasks.md
agent-os/specs/2026-05-06-0001-frontend-spa/: spec.md  tasks.md
agent-os/specs/2026-05-06-0100-auth/: spec.md  tasks.md
agent-os/standards/: index.yml  linting.md
agent-os/standards/backend/: alembic.md  auth.md  fastapi.md  rate-limiting.md  settings.md  sqlmodel.md  testing.md
agent-os/standards/frontend/: shadcn-tailwind.md  vite-react.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260506_0001_create_checkouts.py  20260506_0100_create_users.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  checkout.py  deps.py  health.py
backend/app/core/: config.py  db.py  exceptions.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  checkout.py  user.py
backend/app/schemas/: auth.py  checkout.py
backend/app/services/: auth.py  checkout.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: test_auth_login.py  test_auth_me.py  test_auth_rate_limit.py  test_auth_refresh.py  test_auth_register.py  test_checkout.py
backend/tests/services/: test_checkout.py
docs/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  routes.tsx
frontend/src/lib/: api.ts  (+4 more)
infra/nginx/: nginx.conf
(+10 files in other folders)
